[package]
name = "forever-ago"
version = "0.1.0"
edition = "2024"
description = "Nightly tar.gz backups of a directory with SHA-256 verification and retention pruning"
license = "MIT"
repository = "https://github.com/delorenj/forever-ago"
homepage = "https://github.com/delorenj/forever-ago"
documentation = "https://docs.rs/forever-ago"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.1.0"
fs2 = "0.4.3"
hex = "0.4.3"
sha2 = "0.10.8"
tar = "0.4.44"
